added header and footer

--- a/lynneportfolio/templates/index.html
+++ b/lynneportfolio/templates/index.html
@@ -1,2 +1,22 @@
 {%extends 'base.html'%} {% block content %}
-<h1>LYNNE PORTFOLIO</h1>{% endblock %}
+<div class="container">
+    <header>
+        <h1>Hi! I'm <span>Linetlucy Genchabe</span>.</h1>
+        <h2 style="margin-top: 3%;">I'm a Full Stack Web <span>developer.</span> </h2>
+    </header>
+
+</div>
+
+
+<footer class="contact container" id="contact">
+    <h2 align="center">Contact</h2>
+
+    <div class="social" align="center">
+        <a href="https://www.linkedin.com/in/linetlucygenchabe/"> <img src="static/images/linkedin (1).png" alt="linkedin" height="40px" width="40px"></a>
+        <a href="https://github.com/linetlucy-genchabe"><img src="/static/images/github (1).png" alt="github" height="40px" width="40px"></a>
+        <img src="/static/images/twitter (1).png" alt="twitter" height="40px" width="40px">
+        <a href="https://www.instagram.com/_l.y.n.n.e/"><img src="/static/images/instagram (1).png " alt="instagram" height="40px" width="40px"></a>
+
+    </div>
+</footer>
+{% endblock %}
