--- a/lynneportfolio/templates/navbar.html
+++ b/lynneportfolio/templates/navbar.html
@@ -10,10 +10,17 @@
                     <a class="nav-link active" aria-current="page" href=" {% url 'index' %} " style="color: blueviolet;">Home</a>
                 </li>
                 <li class="nav-item ">
+                    <a class="nav-link active " href="{% url 'about' %}" style="color: blueviolet;">About</a>
+                </li>
+
+                <li class="nav-item ">
                     <a class="nav-link active " href="/project " style="color: blueviolet;">Projects</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link active " href="/skills" style="color: blueviolet;">Skills</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link active " href="/certifications " style="color: blueviolet;">Certifications</a>
                 </li>
 
             </ul>
